[project]
name = "flyte-simple"
version = "0.1.0"
description = "A simple Flyte project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flytekit",
    "test-automation-engine-stackstorm",
]

[tool.uv.sources]
test-automation-engine-stackstorm = { git = "https://github.com/nkongenelly/test_automation_engine_stackstorm.git" }
